--- a/src/componentes/home/Home.css
+++ b/src/componentes/home/Home.css
@@ -1,3 +1,63 @@
+.holaquetal {
+    position: absolute;
+    width: 1920px;
+    height: 888px;
+    left: 0px;
+    top: 118px;
+}
+
+.hola {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 352px 104px;
+
+    position: absolute;
+    width: 968px;
+    height: 766px;
+    left: 0px;
+    top: 0px;
+
+    background: rgba(210, 213, 184, 0.3);
+}
+.texto {
+    width: 802px;
+    height: 323px;
+
+    font-family: 'Be Vietnam Pro';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 61.04px;
+    line-height: 77px;
+
+    color: #335151;
+
+    text-shadow: 0px 144px 58px rgba(0, 0, 0, 0.02), 0px 81px 49px rgba(0, 0, 0, 0.08), 0px 36px 36px rgba(0, 0, 0, 0.13), 0px 9px 20px rgba(0, 0, 0, 0.15), 0px 0px 0px rgba(0, 0, 0, 0.15);
+
+    /* Inside auto layout */
+
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+}
+
+.divFoto {
+    position: absolute;
+    left: 50.42%;
+    right: 0%;
+    top: 0%;
+    bottom: 0%;
+
+    background: radial-gradient(48.42% 74.02% at 0% 50%, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0) 100%);
+    filter: drop-shadow(-353px 135px 151px rgba(0, 0, 0, 0.03)) drop-shadow(-198px 76px 127px rgba(0, 0, 0, 0.1)) drop-shadow(-88px 34px 94px rgba(0, 0, 0, 0.17)) drop-shadow(-22px 8px 52px rgba(0, 0, 0, 0.2)) drop-shadow(0px 0px 0px rgba(0, 0, 0, 0.2));
+    border-radius: 0px 0px 0px 40px;
+    
+}
+
+.foto {
+    width: 100%;
+
+}
 .inicioAgroecologia {
     position: absolute;
     width: 1712px;
