--- a/src/componentes/Header/Header.css
+++ b/src/componentes/Header/Header.css
@@ -1,92 +1,27 @@
 .divHeader {
     display: flex;
-    flex-direction: row;
+    justify-content: space-evenly;
     align-items: center;
-    position: absolute;
-    width: 100%;
-    left: 0px;
-    top: 0px;
+    padding: 1rem;
     background: #335151;
 }
 
-.divLogo {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 8px;
-    gap: 8px;
-
-    width: 288px;
-    height: 88px;
-
-
-    /* Inside auto layout */
-
-    flex: none;
-    order: 0;
-    flex-grow: 0;
-
-}
+.divLogo {}
 
 .divNavbar {
     display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
-    padding: 16px;
-    gap: 32px;
-
-    width: 1069px;
-    height: 80px;
-
-
-    /* Inside auto layout */
-
-    flex: none;
-    order: 1;
-    flex-grow: 0;
+    margin: 0px;
+    padding: 0px;
+    gap: 1rem;
+    list-style: none;
 }
 
-.divDivNavbar {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 8px;
-    gap: 8px;
+.navbar {}
 
-    width: 206px;
-    height: 56px;
-
-    border-radius: 8px;
-
-    /* Inside auto layout */
-
-    flex: none;
-    order: 0;
-    flex-grow: 0;
-}
-
-.navbar {
-    width: 186px;
-    height: 32px;
-
+.divNavbarTexto {
+    color: #FAFFFB;
+    text-decoration: none;
     font-family: 'Be Vietnam Pro';
     font-style: normal;
     font-weight: 500;
-    font-size: 25px;
-    line-height: 32px;
-    /* identical to box height */
-
-    text-align: center;
-
-    color: #FAFFFB;
-
-
-    /* Inside auto layout */
-
-    flex: none;
-    order: 0;
-    flex-grow: 0;
 }
