--- a/src/componentes/Footer/Footer.css
+++ b/src/componentes/Footer/Footer.css
@@ -1,6 +1,7 @@
 .DivFooter {
     display: flex;
     background: rgba(51, 81, 81, 1);
+    padding: 5%;
 
 }
 
@@ -13,10 +14,29 @@
     font-weight: 400;
     color: #F2F2F2;
     margin: 0px;
+    padding: 1rem ;
+}
+.footerIconos{
+    width: 2rem;
+}
+.footerInconosColor{
+    fill: white;
 }
 .divFooterDer{
     display: flex;
+    width: 100%;
 }
 .divRedes{
     display: flex;
+    width: 100%;
+    flex-direction: column;
+}
+.divFooterLogoRedes{
+    display: flex;
+justify-content: space-evenly;
+}
+.footerSeparador{
+    border: 0;
+    border-right: 2px solid rgba(96, 152, 117, 1);
+    opacity: 0.5;
 }
