--- a/src/componentes/home/InicioFotosDatos/InicioFotosDatos.css
+++ b/src/componentes/home/InicioFotosDatos/InicioFotosDatos.css
@@ -11,12 +11,13 @@
     height: 25rem;
     position: relative;
 }
-
+.divEventos{
+    position: relative;
+}
 .divEvento {
     background: rgba(51, 81, 81, 1);
     position: absolute;
-    width: 95%;
-    left: 2.5%;
+    width: 100%;
     z-index: 1000;
     border-radius: 8px;
 }
@@ -31,28 +32,54 @@
 }
 
 .fotosDatosFoto {
-    width: 95%;
-    height: 80%;
-    border-radius: 8px;
-    background: rgba(0, 0, 0, 0.3);
+    border-radius: 24px;
+    height: 368px;
+    position: relative;
 
 }
 
 .fotosDatosDivTexto {
+    background: linear-gradient(0deg,rgba(0,0,0,.3),rgba(0,0,0,.3));
+    border-radius: 24px;
+    box-shadow: 0 310px 124px rgba(0,0,0,.01), 0 174px 105px rgba(0,0,0,.05), 0 77px 77px rgba(0,0,0,.09), 0 19px 43px rgba(0,0,0,.1), 0 0 0 rgba(0,0,0,.1);
     display: flex;
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
     justify-content: center;
     align-items: center;
-    width: 95%;
-    height: 20%;
-    position: absolute;
-    top: 30%;
-    left: 2.5%;
-    background: rgba(51, 81, 81, 0.9);
+    flex-wrap: wrap;
 }
 
 .fotosDatosTexto {
-    font-weight: 500;
-    color: #F3FFF5;
-    margin: 0px;
-    letter-spacing: 0.01em;
+    background: rgba(51,81,81,.85);
+    color: #f3fff5;
+    font-size: 25px;
+    font-weight: 600;
+    letter-spacing: .01em;
+    line-height: 38px;
+    padding: 10px 0;
+    text-align: center;
+    width: 100%;
+}
+
+
+
+
+.prueba{
+
+}
+
+
+
+
+
+.divEventoprueba{
+    background: rgba(51, 81, 81, 1);
+    position: absolute;
+    width: 100%;
+    z-index: 1000;
+    border-radius: 8px;
 }
