--- a/src/componentes/home/InicioAgroecologia/InicioAgroecologia.css
+++ b/src/componentes/home/InicioAgroecologia/InicioAgroecologia.css
@@ -9,9 +9,13 @@
 }
 
 .Titulo {
-    font-weight: 600;
     color: #FAFFFB;
-    margin: 0px;
+    font-weight: 600;
+    font-size: 31.25px;
+    line-height: 35px;
+    /* identical to box height, or 112% */
+
+    text-align: center;
 }
 
 .div {
@@ -24,6 +28,7 @@
     width: 50%;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 .fotoDuraznos {
     height: 100%;
