--- a/src/componentes/Header/Header.css
+++ b/src/componentes/Header/Header.css
@@ -1,12 +1,16 @@
 header {
     background: #335151;
     padding: 15px 0;
+    position: sticky;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 999;
 }
 .divHeader {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    
 }
 .divNavbar {
     display: flex;
@@ -21,4 +25,7 @@ header {
     color: #FAFFFB;
     text-decoration: none;
     font-weight: 500;
+}
+.menuMobile {
+    display: none;
 }
