--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background: #F3FFF5;
 }
+a, a:hover {
+  color: inherit;
+  text-decoration: none;
+}
