--- a/src/componentes/home/InicioVideo/InicioVideo.css
+++ b/src/componentes/home/InicioVideo/InicioVideo.css
@@ -1,17 +1,20 @@
 .InicioVideoTexto {
-    font-weight: 600;
     color: #335151;
     margin: 0px;
     padding: 1rem;
+    font-weight: 600;
+    font-size: 31.25px;
+    line-height: 40px;
+    text-align: center;
 }
 
 .divInicioVideo {
     margin: 2rem 10%;
-    border-radius: 0px 20px;
+    border-radius: 0px 40px;
 
 }
 
 .inicioVideo {
     width: 100%;
-    border-radius: 0px 20px;
+    border-radius: 0px 40px;
 }
