--- a/src/componentes/page/contactanos/Contactanos.css
+++ b/src/componentes/page/contactanos/Contactanos.css
@@ -42,13 +42,18 @@
 
 .divRedesContactanos {
     border: 1px solid #F3FFF5;
+    color: #F3FFF5;;
     border-radius: 24px;
     margin: 3rem 1rem;
     padding: 2rem 0.5rem;
 }
 
+.divRedesContactanos:hover {
+    border: 4px solid #D2D5B8;
+    color: #D2D5B8;
+}
+
 .tituloRedesContactanos {
-    color: #F3FFF5;
     font-weight: 400;
     font-size: 25px;
     line-height: 32px;
@@ -57,9 +62,7 @@
 }
 
 .textoRedesContactanos {
-    color: #F3FFF5;
     font-weight: 300;
-    font-size: 16px;
-    line-height: 20px;
+    font-size: 14px;
     margin: 0px;
 }
