--- a/src/componentes/page/contactanos/Contactanos.css
+++ b/src/componentes/page/contactanos/Contactanos.css
@@ -47,11 +47,14 @@
 .divRedesContactanos {
     border: 1px solid #F3FFF5;
     color: #F3FFF5;
-    ;
     border-radius: 24px;
     margin: 3rem 1rem;
     padding: 2rem 0.5rem;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 .divRedesContactanos:hover {
@@ -69,18 +72,31 @@
 
 .textoRedesContactanos {
     font-weight: 300;
-    font-size: 14px;
+    font-size: 16px;
     margin: 0px;
+    display: block;
 }
 
 .divMapaContactanos {
     display: flex;
     margin: 10rem 0;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .mapaContactanos {
     width: 80%;
     height: 500px;
     box-shadow: 0px 627px 251px rgba(0, 0, 0, 0.01), 0px 353px 212px rgba(0, 0, 0, 0.03), 0px 157px 157px rgba(0, 0, 0, 0.04), 0px 39px 86px rgba(0, 0, 0, 0.05), 0px 0px 0px rgba(0, 0, 0, 0.05);
+}
+
+.textoMapaUbicacionContactanos {
+    padding: 1rem;
+    margin: 1rem;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 90%;
+    text-align: center;
+    display: none;
 }
