--- a/src/componentes/page/voluntariado/Voluntariado.css
+++ b/src/componentes/page/voluntariado/Voluntariado.css
@@ -87,6 +87,7 @@
     position: relative;
     width: 100%;
     height: 60%;
+    padding: 1rem;
     border-radius: 40px 0px;
     left: 80px;
     box-shadow: 0px 254px 101px rgba(0, 0, 0, 0.01), 0px 143px 86px rgba(0, 0, 0, 0.05), 0px 63px 63px rgba(0, 0, 0, 0.09), 0px 16px 35px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
