--- a/src/responsive.css
+++ b/src/responsive.css
@@ -125,6 +125,29 @@
         text-align: center;
         letter-spacing: 0.01em;
     }
+    /*que hacemos*/
+    .queHacemosFlexBox {
+        margin: 50px 0px;
+        padding: 0;
+    }
+    .boxQueHacemos {
+        height: 216px;
+    }
+    .TextoBox {
+        font-size: 16px;
+        line-height: 25px;
+        letter-spacing: 0.01em;
+    }
+    .masBox {
+        width: 24px;
+        height: 24px;
+        bottom: 25px;
+    }
+    .masBox svg {
+        width: 15px;
+        height: 15px;
+    }
+
 }
 /**********
 425px
@@ -134,5 +157,30 @@
     /*FOOTER*/
     .sloganFooter, .copyFooter {
         padding: 0 20px;
+    }
+    /*carousel*/
+    .slick-next {
+        right: 0;
+    }
+    /*que hacemos*/
+    .queHacemosFlexBox {
+        flex-wrap: wrap;
+    }
+    .boxQueHacemos {
+        height: 216px;
+    }
+    .TextoBox {
+        font-size: 16px;
+        line-height: 25px;
+        letter-spacing: 0.01em;
+    }
+    .masBox {
+        width: 24px;
+        height: 24px;
+        bottom: 25px;
+    }
+    .masBox svg {
+        width: 15px;
+        height: 15px;
     }
 }
