--- a/src/componentes/page/que-hacemos/QueHacemos.css
+++ b/src/componentes/page/que-hacemos/QueHacemos.css
@@ -125,6 +125,7 @@
     font-size: 20px;
     line-height: 25px;
     color: #335151;
+    margin-bottom: 20px;
 }
 .templateTextSmall {
     font-size: 20px;
