--- a/src/componentes/home/InicioAgroecologia/InicioAgroecologia.css
+++ b/src/componentes/home/InicioAgroecologia/InicioAgroecologia.css
@@ -1,7 +1,7 @@
 .divAgroecologia {
     background: #335151;
     border-radius: 4px;
-    margin: 5rem 3rem;
+    margin: 5rem 0;
 }
 
 .divTitulo {
