--- a/src/componentes/page/quienes-somos/QuienesSomos.css
+++ b/src/componentes/page/quienes-somos/QuienesSomos.css
@@ -31,6 +31,7 @@
 .QuinesSomosFoto {
     width: 80%;
     height: 80%;
+    object-fit: cover;
 }
 
 
@@ -42,8 +43,9 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    padding: 1rem 1rem 1rem 2rem;
+    padding: 1rem;
     justify-content: center;
+    gap: 1rem;
 }
 
 .QuinesSomosTextoArribaFotoPapa {
@@ -104,6 +106,8 @@
 .containerQuinesSomosSoñadores {
     background: rgba(51, 81, 81, 1);
     border-radius: 0px 40px;
+    padding: 1rem;
+    margin: 5rem 0 0 0;
     box-shadow: inset 0px 500px 200px rgba(0, 0, 0, 0.01), inset 0px 281px 169px rgba(0, 0, 0, 0.05), inset 0px 125px 125px rgba(0, 0, 0, 0.09), inset 0px 31px 69px rgba(0, 0, 0, 0.1);
 
 }
@@ -146,6 +150,7 @@
     height: 80%;
     border-radius: 40px 0px;
     box-shadow: 0px 310px 124px rgba(0, 0, 0, 0.02), 0px 174px 105px rgba(0, 0, 0, 0.08), 0px 77px 77px rgba(0, 0, 0, 0.13), 0px 19px 43px rgba(0, 0, 0, 0.15), 0px 0px 0px rgba(0, 0, 0, 0.15);
+    object-fit: cover;
 }
 .QuinesSomosSoñadoresFoto2 {
     width: 80%;
