--- a/src/componentes/page/ecogranja/Ecogranja.css
+++ b/src/componentes/page/ecogranja/Ecogranja.css
@@ -9,6 +9,10 @@
     height: 100%;
     justify-content: space-evenly;
 }
+.divTituloEcogranja{
+    padding: 1rem;
+    margin: 5rem 0px 0px 0px;;
+}
 
 .tituloEcogranjaEducativo {
     color: #F3FFF5;
