--- a/src/componentes/page/que-hacemos/QueHacemos.css
+++ b/src/componentes/page/que-hacemos/QueHacemos.css
@@ -64,7 +64,7 @@
     padding: 0 100px;
 }
 .contenedorColor {
-    background: #D2D5B8;
+    background: #E0E2D1;
     box-shadow: 0px 627px 251px rgba(0, 0, 0, 0.01), 0px 353px 212px rgba(0, 0, 0, 0.05), 0px 157px 157px rgba(0, 0, 0, 0.09), 0px 39px 86px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
     border-radius: 40px 0px;
     padding: 100px;
