--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@ body {
   background: #F3FFF5;
 }
 a, a:hover {
-  color: inherit;
+  text-decoration: none;
+}
+
+.divNavbarTexto, .divNavbarTexto:hover {
+  color: #D2D5B8;
   text-decoration: none;
 }
